# not-a-rust-grep

./: Cargo.toml  README.md  main.rs
crates/core/: Cargo.toml
crates/core/src/: arguments.rs  flags.rs  main.rs
crates/not-a-rust-grep-cli/: Cargo.toml
crates/not-a-rust-grep-cli/src/: arguments.rs  lib.rs  main.rs
