[package]
include = ["Cargo.toml", "src/**/*.rs"]
name    = "not-a-rust-grep-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "not-a-rust-grep-cli"
path = "src/main.rs"

[lib]
crate-type = ["rlib"]
path       = "src/lib.rs"

[dependencies]
anyhow = { version = "1.0.86" }
clap   = { version = "4.5.10", features = ["derive"] }
